--- a/cpp/makefile
+++ b/cpp/makefile
@@ -2,10 +2,14 @@ CC = g++
 INCLUDE = -I`python -c 'from distutils.sysconfig import *; print get_python_inc()'`
 BOOST = -lboost_python -lpython2.7 -lboost_serialization
 CFLAGS = -std=c++11 -L/usr/local/lib -O3
-CFLAGS_SO = -shared -fPIC -std=c++11 -L/usr/local/lib -O3 
 
-python: ## Python用にビルド
-	$(CC) model.cpp -o python/model.so $(INCLUDE) $(CFLAGS_SO) $(BOOST)
+.PHONY: train
+train: ## 学習用
+	$(CC) train.cpp -o train $(CFLAGS) $(INCLUDE) $(BOOST)
+
+.PHONY: test
+test: ## テスト用
+	$(CC) test.cpp -o test $(CFLAGS) $(INCLUDE) $(BOOST)
 
 .PHONY: help
 help:
